--- a/center/src/main/webapp/WEB-INF/basicdata/selfOilpage.vm
+++ b/center/src/main/webapp/WEB-INF/basicdata/selfOilpage.vm
@@ -39,7 +39,7 @@
 <script>
     var cols=[[
         {field:'cardNo',title:'自用油卡号',width:5,align:'center'},
-        {field: 'createDate', title: '创建时间', width: 5, align: 'center',formatter:function(value,row,index){
+       /* {field: 'createDate', title: '创建时间', width: 5, align: 'center',formatter:function(value,row,index){
             var time=formatDatebox(row.createDate);
             return time;
         }},
@@ -48,7 +48,7 @@
             var time1=formatDatebox(row.updateDate);
             return time1;
         }},
-        {field:'updateUser',title:'更新人',width:5,align:'center'},
+        {field:'updateUser',title:'更新人',width:5,align:'center'},*/
         {field:'status',title:'状态',width:5,align:'center'}
     ]]
     var cardNo;
